fixing alignment description ie

--- a/code/css/ie.css
+++ b/code/css/ie.css
@@ -1,19 +1,60 @@
+.clearfix {
+  *zoom: 1;
+}
+.clearfix:before,
+.clearfix:after {
+  display: table;
+  content: "";
+  line-height: 0;
+}
+.clearfix:after {
+  clear: both;
+}
+.explorer.v_9 #featured div .jss-slider .jss-title-description,
+.explorer.v_8 #featured div .jss-slider .jss-title-description,
+.explorer.v_9 #grid-top div .jss-slider .jss-title-description,
+.explorer.v_8 #grid-top div .jss-slider .jss-title-description,
+.explorer.v_9 #grid-top2 div .jss-slider .jss-title-description,
+.explorer.v_8 #grid-top2 div .jss-slider .jss-title-description {
+  height: 100%;
+  width: 100%;
+}
+.explorer.v_9 #featured div .jss-slider .jss-title-description .jss-title,
+.explorer.v_8 #featured div .jss-slider .jss-title-description .jss-title,
+.explorer.v_9 #grid-top div .jss-slider .jss-title-description .jss-title,
+.explorer.v_8 #grid-top div .jss-slider .jss-title-description .jss-title,
+.explorer.v_9 #grid-top2 div .jss-slider .jss-title-description .jss-title,
+.explorer.v_8 #grid-top2 div .jss-slider .jss-title-description .jss-title,
+.explorer.v_9 #featured div .jss-slider .jss-title-description .jss-description,
+.explorer.v_8 #featured div .jss-slider .jss-title-description .jss-description,
+.explorer.v_9 #grid-top div .jss-slider .jss-title-description .jss-description,
+.explorer.v_8 #grid-top div .jss-slider .jss-title-description .jss-description,
+.explorer.v_9 #grid-top2 div .jss-slider .jss-title-description .jss-description,
+.explorer.v_8 #grid-top2 div .jss-slider .jss-title-description .jss-description {
+  height: 100% !important;
+  position: absolute;
+}
 .explorer.v_9 #featured div .jss-slider .jss-title-description .jss-title,
 .explorer.v_8 #featured div .jss-slider .jss-title-description .jss-title,
 .explorer.v_9 #grid-top div .jss-slider .jss-title-description .jss-title,
 .explorer.v_8 #grid-top div .jss-slider .jss-title-description .jss-title,
 .explorer.v_9 #grid-top2 div .jss-slider .jss-title-description .jss-title,
 .explorer.v_8 #grid-top2 div .jss-slider .jss-title-description .jss-title {
-  float: left;
+  left: 0;
   text-align: left;
+  width: 25%;
 }
-.explorer.v_9 .jss-description,
-.explorer.v_8 .jss-description {
-  float: right;
-  height: 100% !important;
-  position: absolute;
+.explorer.v_9 #featured div .jss-slider .jss-title-description .jss-description,
+.explorer.v_8 #featured div .jss-slider .jss-title-description .jss-description,
+.explorer.v_9 #grid-top div .jss-slider .jss-title-description .jss-description,
+.explorer.v_8 #grid-top div .jss-slider .jss-title-description .jss-description,
+.explorer.v_9 #grid-top2 div .jss-slider .jss-title-description .jss-description,
+.explorer.v_8 #grid-top2 div .jss-slider .jss-title-description .jss-description {
+  padding: 5%;
+  right: 0;
+  width: 75%;
 }
-.explorer.v_9 .jss-title-description,
-.explorer.v_8 .jss-title-description {
-  position: relative;
+.explorer.v_9 .container,
+.explorer.v_8 .container {
+  width: 960px;
 }
